Fix red orange green not showing

--- a/src/main/resources/css/dc-overview.css
+++ b/src/main/resources/css/dc-overview.css
@@ -50,7 +50,7 @@
 }
 
 .field-box:focused {
-    -fx-border-color: #888888;
+    -fx-border-width: 2px;
 }
 
 .next-button {
